fix(brain): fix z-index

--- a/src/containers/application/styles.scss
+++ b/src/containers/application/styles.scss
@@ -16,7 +16,7 @@
 }
 
 .portal {
-  z-index: -1;
+  // z-index: -1;
   overflow: hidden;
   position: absolute;
   top: 0;
